--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,15 +1,34 @@
 {
   "pages": [
+    "pages/home/home",
+    "pages/user/user",
     "pages/index/index",
     "pages/logs/logs"
   ],
+  "tabBar": {
+    "custom": true,
+    "color": "#666666",
+    "selectedColor": "#6644FF",
+    "backgroundColor": "#FFFFFF",
+    "borderStyle": "black",
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "艺考"
+      },
+      {
+        "pagePath": "pages/user/user",
+        "text": "会员"
+      }
+    ]
+  },
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "Weixin",
+    "navigationBarTitleText": "悦舞喵",
     "navigationBarTextStyle": "black"
   },
-  "renderer": "skyline",
+  "renderer": "webview",
   "rendererOptions": {
     "skyline": {
       "defaultDisplayBlock": true,
