--- a/project.config.json
+++ b/project.config.json
@@ -26,7 +26,7 @@
     ],
     "ignoreUploadUnusedFiles": true,
     "compileHotReLoad": false,
-    "skylineRenderEnable": true,
+    "skylineRenderEnable": false,
     "es6": true
   },
   "simulatorType": "wechat",
