--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "module": "CommonJS",
     "target": "ES2020",
     "allowJs": true,
-    "checkJs": false,
+    "checkJs": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
